# dnf-repoconfig-daemon

./: CMakeLists.txt  dnf-repoconfig-daemon.spec  main.cpp
basic-api/: CMakeLists.txt  client.cpp  configuration.cpp  configuration.hpp  repoconf.cpp  repoconf.hpp
basic-api/client/: test.py
client/: test.py
dbus/: CMakeLists.txt  client-glue.hpp  dnf-repoconfig-daemon.service  org.rpm.dnf.v1.rpm.RepoConf.service  repoconf-server-glue.hpp  repository.cpp  repository.hpp  server-glue.hpp
dbus/files/: org.rpm.dnf.v1.conf  org.rpm.dnf.v1.conf.repo.conf  org.rpm.dnf.v1.conf.repo.xml
generated-stubs/: CMakeLists.txt  main.cpp
generated-stubs/client/: test.py
generated-stubs/repoconf/: configuration.cpp  repoconf-client-glue.hpp  repoconf.hpp
generated-stubs/repoconf/glue/: repoconf.cpp  repoconf.hpp
repoconf/: CMakeLists.txt  configuration.hpp  repoconf.cpp
repoconf/idl/: org.rpm.dnf.v1.rpm.RepoConf.xml
repository/: CMakeLists.txt  context.cpp  context.hpp
test/: CMakeLists.txt  Context.cpp  Context.hpp  Repository.cpp  Repository.hpp  client-glue.hpp  main.cpp  server-glue.hpp
test/dbus/: client-glue.hpp  repository.cpp  repository.hpp  server-glue.hpp
test/dbus/files/: org.rpm.dnf.Repository.conf  org.rpm.dnf.repository.xml
test/repository/: context.cpp
